k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rss-api-service
spec:
  selector:
    app: rss-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
